Выбрать 6 групп по интересам и выводить самые популярные группы.